fix: adjust position of container to align center

--- a/src/components/commons/toolkit/buttons/ArrowButton/styles.module.css
+++ b/src/components/commons/toolkit/buttons/ArrowButton/styles.module.css
@@ -4,7 +4,9 @@
   align-items: center;
 
   position: absolute;
-  bottom: 0.1rem;
+  right: 50%;
+  left: 50%;
+  bottom: 1rem;
 
   z-index: 2;
 
